# parallel-codegen-orchestrator

./: .coderabbit.yaml  .coverage  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  =3.0  =3.5.0  =6.0  AGENTS.md  CI-CD-GUIDE.md  CODEGEN-SETUP.md  CODERABBIT.md  README.md  TESTING_GUIDE.md  TEST_COVERAGE_SUMMARY.md  TEST_GENERATION_REPORT.md  config.example.yaml  config.yaml  coverage.xml  main.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/workflows/: ci.yml
.serena/: project.yml
examples/: codegen_executor_usage.py  graphql_usage.py  logging_demo.py
src/: __init__.py  config.py  log_config.py
src/agents/: __init__.py  agent_pool.py  codegen_executor.py
src/automation/: __init__.py  github_automation.py  github_automation.py.backup
src/github/: __init__.py  dependency_parser.py  graphql_api.py  rest_api.py
src/graph/: __init__.py  dependency_graph.py  validator.py
src/orchestrator/: __init__.py  dynamic_deps.py  orchestrator.py  progress.py  result_manager.py  retry.py  task_executor.py
tests/: __init__.py  test_config.py  test_dependency_parser.py  test_dynamic_deps.py  test_github_automation.py  test_github_graphql.py  test_github_rest.py  test_logging.py  test_orchestrator.py  test_progress.py  test_result_manager.py  test_retry.py  test_task_executor.py
tests/agents/: __init__.py  test_agent_pool.py  test_codegen_executor.py
tests/graph/: test_dependency_graph.py  test_validator.py
wiki/: AgentCodingReference.md
