[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -ra
    --strict-markers
    --strict-config
    --cov=src
    --cov-report=term-missing:skip-covered
    --cov-report=html
    --cov-report=xml
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests that use asyncio",
]

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Phase 1: Core rules (CURRENTLY ACTIVE)
# Start with essential error detection and code quality rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]

# Rules to ignore globally
ignore = [
    "I001",  # Import block is un-sorted or un-formatted - handled by standalone isort
]

# PHASED ROLLOUT PLAN:
# Phase 1 (Current): E, W, F, I - Essential errors and imports
#   - Checkpoint: All existing code passes these rules
#   - Timeline: Immediate (current state)
#
# Phase 2: Add code quality rules
#   - Add: ["N", "UP", "B", "SIM", "RUF"]
#   - N: pep8-naming
#   - UP: pyupgrade (modern Python idioms)
#   - B: flake8-bugbear (likely bugs)
#   - SIM: flake8-simplify
#   - RUF: Ruff-specific rules
#   - Checkpoint: Fix violations in src/ first, then tests/
#   - Timeline: After Phase 1 stabilizes (1-2 weeks)
#
# Phase 3: Add type checking and documentation
#   - Add: ["ANN", "D", "DOC"]
#   - ANN: flake8-annotations
#   - D: pydocstyle
#   - DOC: documentation checks
#   - Checkpoint: Add type hints and docstrings to public APIs
#   - Timeline: After Phase 2 complete (2-4 weeks)
#
# Phase 4: Add security and best practices
#   - Add: ["S", "PTH", "TRY", "PERF"]
#   - S: flake8-bandit (security)
#   - PTH: pathlib usage
#   - TRY: exception handling best practices
#   - PERF: performance anti-patterns
#   - Checkpoint: Security audit and performance review
#   - Timeline: After Phase 3 complete (4-6 weeks)
#
# Phase 5: Strict mode (optional, team decision)
#   - Add remaining rules as needed: ["A", "C4", "DTZ", "EM", "ARG", etc.]
#   - Checkpoint: Team agreement on strict enforcement
#   - Timeline: After Phase 4 complete (6+ weeks)

# Phase-specific ignores (to be removed as code is cleaned up)
# When moving to Phase 2, review and remove unnecessary ignores

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
# Test files: More lenient rules for test code
"tests/**/*.py" = [
    "S106",    # Possible hardcoded password (test data is fine)
    "PLR2004", # Magic value used in comparison (test values are fine)
    "DTZ005",  # datetime.now() without tz (tests don't need timezone)
    "ARG001",  # Unused function argument (common in test fixtures)
    "ARG002",  # Unused method argument (pytest fixtures)
    "PTH123",  # open() should be Path.open() (tests can use open())
]

# Example files: Allow prints and simplified code
"examples/**/*.py" = [
    "T201",    # print found (examples can use print)
    "INP001",  # implicit namespace package (examples don't need __init__.py)
]

# Migration helpers can be added here as needed
# Example: "src/legacy/*.py" = ["E501", "N802"]  # Temporarily ignore for legacy code

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
